[package]
name = "streamed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
title_parser = "0.1.2"
http-types = "2.12.0"
regex = "1.7.1"
tide = "0.16.0"
urlencoding = "2.1.2"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }